--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,7 @@
 <link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 
-<script>
-
-
-</script>
+<script></script>
 
 </head>
 <body>
